crates/ink/tests/ui/contract/fail/storage-unknown-marker.stderr
error: unknown ink! attribute (path)
 --> tests/ui/contract/fail/storage-unknown-marker.rs:4:11
  |
4 |     #[ink(unknown_or_unsupported)]
  |           ^^^^^^^^^^^^^^^^^^^^^^
